
This is a url-launcher, which will do a few cool things. Currently, it
launches urls using the X paste buffer. The idea is that you are on irc, or
reading an email, and see a url, you select the text, press the "Paste"
button on the epplet, and the url is launched. The command to launch the
url is defined in the config.

The epplet will parse the text, so you can grab a load of text, and it'll
find and launch the embedded url.

It'll also clean up naughty chars, but I have more to do here.

The next step is the "watching" part. The epplet will watch a text file (or
several) containing a list of urls, and will flash when a new one is added.
Clicking the (not yet existing) launch button will launch this url. The idea
is for apps like TE which use a url list ~/.te/.urls. So you're in irc,
someone gives you a url, and the epplet flashes and lets you launch it, no
typing.

Also, (once I code it), the epplet will record all urls you launch through 
it in a text file. In a later version, this list will be emailed to your mom
on a weekly basis
;)

Obviously, this thing has the cloaking stuff, as I just copy and paste it
these days :)

Its an early beta, so bear with me while I rapidly add features :)

-------------------------------------------------------------------------------

Tue Nov 23 23:26:47 GMT 1999
(gilbertt)

Now save all urls processed to ~/.Urls

Auto e-mailing to your mom is not yet supported.

-------------------------------------------------------------------------------

Wed Nov 24 18:29:19 GMT 1999
(gilbertt)

E-UrlWatch.

Changed size. Added buttons to allow several different "modes" of action.
When you have a url in the X paste buffer, each button will grab the url,
and perform a configurable action upon it. The three are www, ftp, and get.
The default is gnome-moz-remote for the first two, and wget for the third.
The epplet is extremely ugly right now, but I'm working on the code atm, so
ignore that :)

More cool stuff to come :)
