@@ -827,3 +827,13 @@ ignore that :)
 
 More cool stuff to come :)
 
+-------------------------------------------------------------------------------
+
+Wed Nov 24 20:11:57 GMT 1999
+(gilbertt)
+
+E-UrlWatch.
+
+Now displays the url it launches, and scrolls long urls back and forth, so
+you can see 'em.
+
